# sparsetorch

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
docs/: README.md  dD_basis_functions.html  index.html  oneD_basis_functions.html  plotter.html  readme.md  search.js  solver.html  sparsetorch.html  utils.html
docs/sparsetorch/: dD_basis_functions.html  oneD_basis_functions.html  plotter.html  solver.html  splines.html  utils.html
examples_and_tutorial/: 1D_examples.py  dD_examples.py  tutorial.ipynb
src/sparsetorch/: __init__.py  dD_basis_functions.py  oneD_basis_functions.py  plotter.py  solver.py  splines.py  utils.py
src/sparsetorch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
