[metadata]
name = sparsetorch
version = 0.0.1
author = Timothée Hornek
author_email = timothee.hornek@web.de
description = small package implementing sparse grids using pytorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timotheehornek/sparsetorch
project_urls =
    Bug Tracker = https://github.com/timotheehornek/sparsetorch/issues
    Documentation = https://timotheehornek.github.io/sparsetorch/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
